# hackathon-smartcity-2026

./: .gitignore  CHANGES_GEMINI.md  GEMINI.md  README.md  analyze_zip.py  combine_hermosillo_years.py  combine_zips_hermosillo.py  exploracion.qgz  extract_hermosillo_fatales_shp.py  hermosillo_accidentes_fatales_2024.csv  hermosillo_accidentes_todos_2024.csv  index.html  pyproject.toml  reporte_hermosillo_2024.typ
data/: README.md
data/atus_2024_shp/conjunto_de_datos/: BASE_MUNICIPAL_ACCIDENTES_GEORREFERENCIADOS_2024.shx
data/hermosillo_fatales_2020_2024/: hermosillo_fatales_2020_2024.shx
data/hermosillo_maestro_2020_2024/: hermosillo_maestro_2020_2024.shp
data/hermosillo_shapefile/: hermosillo_atus_2024.shp
data/processed/: DATA_README.md
data/processed/hermosillo_fatales_2020_2024/: hermosillo_fatales_2020_2024.shp
data/processed/hermosillo_maestro_2020_2024/: hermosillo_maestro_2020_2024.shx
data/processed/hermosillo_shapefile/: hermosillo_atus_2024.shx
docs/: diccionario_datos.typ
reports/: README.md
scripts/: README.md  analyze_risk_causes.py  export_geojson_web.py  extract_hermosillo_all.py  extract_hermosillo_fatales.py  extract_hermosillo_shp.py  generate_adn_cards.py  generate_collision_typology_2024.py  generate_dictionary.py  generate_interactive_charts.py  generate_intersection_ranking.py  generate_multilevel_map_data.py  generate_speed_risk_map.py  generate_victim_heatmaps.py
