[project]
name = "angeles-viales"
version = "0.1.0"
description = "Ángeles Viales: Iniciativa de seguridad vial para Hermosillo, Sonora."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "JesusF10" }
]
dependencies = [
    "geopandas>=1.0.1",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
    "pyogrio>=0.9.0",
    "openpyxl>=3.1.5",
    "numpy>=2.0.0",
    "rtree>=1.3.0",
    "altair>=6.0.0",
    "vega-datasets>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.uv]
managed = true
package = false
